--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.17.0
+  horizontal_data_table: ^4.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
